src/app/globals.css
:root {
  --color-gray-98: hsl(0deg 0% 98%);
  --color-gray-90: hsl(0deg 0% 90%);
  --color-gray-80: hsl(0deg 0% 80%);
  --color-gray-70: hsl(0deg 0% 70%);
  --color-gray-40: hsl(0deg 0% 40%);
  --color-gray-30: hsl(0deg 0% 30%);
  --color-gray-20: hsl(0deg 0% 20%);
  --color-gray-16: hsl(0deg 0% 16%);
  --color-gray-12: hsl(0deg 0% 12%);
  --color-gray-10: hsl(0deg 0% 10%);

  --color-default-background: var(--color-gray-10);
  --color-default-foreground: var(--color-gray-98);

  --color-primary: hsl(120deg 50% 48%);
  --color-primary-fade: hsl(120deg 50% 96%);
  --color-primary-lighter: hsl(120deg 50% 52%);
  --color-primary-darker: hsl(120deg 50% 44%);
  --color-primary-opposite: var(--color-gray-10);

  --border-radius: 0.875rem;

  --full-width: 75rem;
  --full-width-padding-inline: calc(max(100% - var(--full-width), 2rem) / 2);

  --animation-duration-fast: 0.1s;
  --animation-duration-normal: 0.5s;
  --animation-duration-slow: 1s;

  --fz-700: 1.4rem;
  --fz-600: 1.2rem;
  --fz-500: 1rem;
  --fz-400: 0.8rem;
}

*,
*::before,
*::after {
  box-sizing: border-box;

  margin: 0;
  padding: 0;
}

p {
  color: var(--color-gray-80);
}

html {
  color-scheme: dark;
}

input,
label,
select,
textarea,
button,
fieldset,
legend,
datalist,
output,
option,
optgroup {
  font: inherit;
}

ul {
  list-style: none;
}

a {
  color: inherit;

  text-decoration: none;
}

body {
  background-color: var(--color-default-background);
  color: var(--color-default-foreground);

  display: grid;
  grid-template-rows: auto 1fr auto;

  min-block-size: 100dvb;
  > * {
    padding-inline: var(--full-width-padding-inline);
  }

  .tagline {
    background-color: var(--color-gray-16);
    padding-block: 1rem;
    text-align: center;
  }
}

